modal de confirmação de exclusão, bootstrap nos botoes iniciais

--- a/AspNet.CRUD/Views/Jumper/Adicionar.cshtml
+++ b/AspNet.CRUD/Views/Jumper/Adicionar.cshtml
@@ -28,11 +28,11 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Criar" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
