--- a/AspNet.CRUD/Views/Jumper/_Excluir.cshtml
+++ b/AspNet.CRUD/Views/Jumper/_Excluir.cshtml
@@ -1,5 +1,4 @@
-﻿@model AspNet.CRUD.Models.Jumpers
-@{ViewBag.Title = "Excluir";}
+﻿@{ViewBag.Title = "Excluir";}
 <html>    
     <body>
 	    <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
