--- a/AspNet.CRUD/Views/Jumper/Editar.cshtml
+++ b/AspNet.CRUD/Views/Jumper/Editar.cshtml
@@ -1,31 +1,36 @@
 ﻿@model AspNet.CRUD.Models.Jumpers
+@{ViewBag.Title = "Editar";}
+<br><br>
+<h2>Editar Jumper</h2>
 
-@{ViewBag.Title = "Visualizar";}
-<br>
-	<body>
-        <br><br>
-		<div id="main" class="container-fluid">
-        <fieldset>
-            <legend>Dados do jumper</legend>
-                @Html.HiddenFor(model => model.IDJumpers)
-            <div class="editor-label">
-                @Html.LabelFor(model => model.TypeJumpers)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.TypeJumpers)
-                @Html.ValidationMessageFor(model => model.TypeJumpers)
-            </div>
-            <div class="editor-label">
-                @Html.LabelFor(model => model.QntdJumpers)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.QntdJumpers)
-                @Html.ValidationMessageFor(model => model.QntdJumpers)
-            </div>
-        </fieldset>
-	 		<hr />
-            @Html.ActionLink("Voltar", "Index")
-		</div>
-<!--		<script src="js/jquery.min.js"></script>
-	 	<script src="js/bootstrap.min.js"></script> -->
-	</body>
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+
+    <fieldset>
+        <legend>Dados do jumper</legend>
+            @Html.HiddenFor(model => model.IDJumpers)
+        <div class="editor-label">
+            @Html.LabelFor(model => model.TypeJumpers)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.TypeJumpers)
+            @Html.ValidationMessageFor(model => model.TypeJumpers)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.QntdJumpers)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.QntdJumpers)
+            @Html.ValidationMessageFor(model => model.QntdJumpers)
+        </div>
+
+        <p>
+            <input type="submit" value="Salvar" />
+        </p>
+    </fieldset>
+}
+<div>
+    @Html.ActionLink("Voltar", "Index")
+</div>
