--- a/AspNet.CRUD/Views/Jumper/Visualizar.cshtml
+++ b/AspNet.CRUD/Views/Jumper/Visualizar.cshtml
@@ -11,10 +11,10 @@
             <div class="editor-label">
                 @Html.LabelFor(model => model.TypeJumpers)
             </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.TypeJumpers)
+          <!--  <div class="editor-field"> -->
+                @Html.TextBoxFor(model => model.TypeJumpers)
                 @Html.ValidationMessageFor(model => model.TypeJumpers)
-            </div>
+         <!--   </div> -->
             <div class="editor-label">
                 @Html.LabelFor(model => model.QntdJumpers)
             </div>
