--- a/AspNet.CRUD/Views/Jumper/_Excluir.cshtml
+++ b/AspNet.CRUD/Views/Jumper/_Excluir.cshtml
@@ -1,24 +1,19 @@
 ﻿@{ViewBag.Title = "Excluir";}
-<html>    
-    <body>
-	    <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
-		    <div class="modal-dialog" role="document">
-			    <div class="modal-content">
-				    <div class="modal-header">
-					    <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
-					    <h4 class="modal-title" id="modalLabel">Excluir Item</h4>
-				    </div>
-				    <div class="modal-body">
-					    Deseja realmente excluir este item?
-				    </div>
-				    <div class="modal-footer">
-					    <button type="button" class="btn btn-primary">Sim</button>
-                        <!-- actionlink -->
-                        @Html.ActionLink("Sim", "Excluir", new {}, new { @class="btn btn-primary" }) 
-					    <button type="button" class="btn btn-default" data-dismiss="modal">N&atilde;o</button>
-				    </div>
-			    </div>
-		    </div>
-	    </div>
-    </body>
-</html>
+
+<div class="modal fade" data-id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="modalLabel">Excluir Item</h4>
+			</div>
+			<div class="modal-body">
+				Deseja realmente excluir este item?
+			</div>
+			<div class="modal-footer">
+				<button type="button" data-id="confirmRemove" class="btn btn-primary">Sim</button>
+				<button type="button" class="btn btn-default" data-dismiss="modal">N&atilde;o</button>
+			</div>
+		</div>
+	</div>
+</div>
