--- a/AspNet.CRUD/Views/Jumper/_Listagem.cshtml
+++ b/AspNet.CRUD/Views/Jumper/_Listagem.cshtml
@@ -5,7 +5,7 @@
 <hr />
 <div id="list" class="row">
     <div class="table-respoonsive col-md-12">
-		<table class="table table-striped" cellspacing="0" cellpadding="0">
+		<table class="table table-striped">
 			<thead>
 				<tr>
 					<th>@Html.DisplayName("ID")</th>
