--- a/AspNet.CRUD/Views/Jumper/Adicionar.cshtml
+++ b/AspNet.CRUD/Views/Jumper/Adicionar.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNet.CRUD.Models.Jumpers
+﻿@*@model AspNet.CRUD.Models.Jumpers
 
 @{ViewBag.Title = "Adicionar";}
 <br><br>
@@ -35,4 +35,24 @@
 
 <div>
     @Html.ActionLink("Voltar", "Index")
+</div>*@
+
+@model  long
+
+<div class="modal fade" data-id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="modalLabel">Excluir Item</h4>
+			</div>
+			<div class="modal-body">
+				Deseja realmente excluir este item?
+			</div>
+			<div class="modal-footer">
+				@*<button type="button" data-id="confirmRemove" class="btn btn-primary">Sim</button>*@
+				<button type="button" class="btn btn-default" data-dismiss="modal">Não</button>
+			</div>
+		</div>
+	</div>
 </div>
