--- a/AspNet.CRUD/Views/Jumper/_Excluir.cshtml
+++ b/AspNet.CRUD/Views/Jumper/_Excluir.cshtml
@@ -1,5 +1,4 @@
-﻿@model long
-
+﻿@model  long
 @* 
 Model é o ID do item a ser excluido!
 *@
@@ -15,7 +14,7 @@ Model é o ID do item a ser excluido!
 				Deseja realmente excluir este item?
 			</div>
 			<div class="modal-footer">
-                @Ajax.ActionLink("Aham", "Excluir", new { id=item.IDJumpers }, new AjaxOptions() { HttpMethod = "GET", OnSuccess = "confirmacaoExcluirOnSuccess" }, new { @class = "btn btn-primary btn-xs" })
+                @Ajax.ActionLink("Aham", "Excluir", new { id = Model }, new AjaxOptions() { HttpMethod = "POST", OnSuccess = "excluirOnSuccess" }, new { @class = "btn btn-primary" })
 				@*<button type="button" data-id="confirmRemove" class="btn btn-primary">Sim</button>*@
 				<button type="button" class="btn btn-default" data-dismiss="modal">Não</button>
 			</div>
