--- a/AspNet.CRUD/Views/Jumper/Adicionar.cshtml
+++ b/AspNet.CRUD/Views/Jumper/Adicionar.cshtml
@@ -1,57 +1,37 @@
-﻿@*@model AspNet.CRUD.Models.Jumpers
-
-@{ViewBag.Title = "Adicionar";}
-<br><br>
-<h2>Adicionar</h2>
-
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-
-    <fieldset>
-        <legend>Jumpers</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.TypeJumpers)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.TypeJumpers)
-            @Html.ValidationMessageFor(model => model.TypeJumpers)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.QntdJumpers)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.QntdJumpers)
-            @Html.ValidationMessageFor(model => model.QntdJumpers)
-        </div>
-
-        <p>
-            <input type="submit" value="Criar" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Voltar", "Index")
-</div>*@
-
-@model  long
-
+﻿@model AspNet.CRUD.Models.Jumpers
 <div class="modal fade" data-id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="modalLabel">Excluir Item</h4>
 			</div>
 			<div class="modal-body">
-				Deseja realmente excluir este item?
-			</div>
+                @using (Ajax.BeginForm(actionName: "Adicionar", controllerName: "Jumper", routeValues: null, ajaxOptions: new AjaxOptions() { HttpMethod = "POST", OnSuccess = "cadastrarItemOnSuccess" }, htmlAttributes: new { id = "cadastrarForm" }))
+                {
+                    <fieldset>
+                    <legend>Adicionar Jumpers</legend>
+
+                    <div class="editor-label">
+                    @Html.LabelFor(model => model.TypeJumpers)
+                    </div>
+                    <div class="editor-field">
+                    @Html.EditorFor(model => model.TypeJumpers)
+                    @Html.ValidationMessageFor(model => model.TypeJumpers)
+                    </div>
+
+                    <div class="editor-label">
+                    @Html.LabelFor(model => model.QntdJumpers)
+                    </div>
+                    <div class="editor-field">
+                    @Html.EditorFor(model => model.QntdJumpers)
+                    @Html.ValidationMessageFor(model => model.QntdJumpers)
+                    </div>
+                    </fieldset>
+                }
+   			</div>
 			<div class="modal-footer">
-				@*<button type="button" data-id="confirmRemove" class="btn btn-primary">Sim</button>*@
-				<button type="button" class="btn btn-default" data-dismiss="modal">Não</button>
+				<button type="button" id="btnAdicionarItem" class="btn btn-primary">Sim</button>
+				<button type="button" class="btn btn-default" data-dismiss="modal">Voltar</button>
 			</div>
 		</div>
 	</div>
