começo da paginação

--- a/AspNet.CRUD/Views/Jumper/_Listagem.cshtml
+++ b/AspNet.CRUD/Views/Jumper/_Listagem.cshtml
@@ -31,16 +31,15 @@
 		</table>
 	</div>			
 </div>
+
+@*Paginação 10 itens por página*@
 <div id="bottom" class="row">
 	<div class="col-md-12">
-			
 		<ul class="pagination">
-			<li class="disabled"><a>Anterior</a></li>
-			<li class="disabled"><a>1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li class="next"><a href="#" rel="next">próximo</a></li>
-		</ul>
+			<li id="FirstPage"><a>Primeira Página</a></li>
+			<li id="LastPage"><a>Última Página</a></li>
+            <input class="text-box single-line" data-val="true" id="EscolhaPagina" name="EscolhaPagina" type="number">
+        </ul>
 			
 	</div>
 </div>
