--- a/AspNet.CRUD/Content/bootstrap.css
+++ b/AspNet.CRUD/Content/bootstrap.css
@@ -2651,7 +2651,7 @@ input[type="search"] {
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"] {
   position: absolute;
-  margin-top: 4px \9;
+  margin-top: 4px;
   margin-left: -20px;
 }
 .radio + .radio,
