--- a/AspNet.CRUD/Views/Jumper/_Listagem.cshtml
+++ b/AspNet.CRUD/Views/Jumper/_Listagem.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<AspNet.CRUD.Models.Jumpers>
-@* @model string *@
 @{ViewBag.Title = "Página Inicial";}
 <br><br>
 <hr />
@@ -33,13 +32,14 @@
 </div>
 
 @*Paginação 10 itens por página*@
-<div id="bottom" class="row">
+@{Html.RenderPartial("_Paginacao", new AspNet.CRUD.ViewModel.PaginacaoViewModel());}
+
+@*<div id="bottom" class="row">
 	<div class="col-md-12">
 		<ul class="pagination">
 			<li id="FirstPage"><a>Primeira Página</a></li>
 			<li id="LastPage"><a>Última Página</a></li>
             <input class="text-box single-line" data-val="true" id="EscolhaPagina" name="EscolhaPagina" type="number">
         </ul>
-			
 	</div>
-</div>
+</div>*@
